infrastructure/k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  ports:
  - port: 8000
  selector:
    app: fastapi
  type: ClusterIP
